Fix overflowing track info in preview

--- a/src/components/TrackPreview/TrackPreview.css
+++ b/src/components/TrackPreview/TrackPreview.css
@@ -34,6 +34,10 @@
   gap: 0;
 }
 
+.track-preview .track-info .subtext {
+  overflow: hidden;
+}
+
 button.close-btn {
   font-size: 1rem;
   cursor: pointer;
